Errors solved